--- a/10.2.0/angular/src/app/pharmacist/purchase-invoice-list/purchase-invoice-list.component.html
+++ b/10.2.0/angular/src/app/pharmacist/purchase-invoice-list/purchase-invoice-list.component.html
@@ -107,9 +107,9 @@
                       <li (click)="editInvoice(selectedRecord)">
                         <i class="pi pi-pencil"></i> Edit
                       </li>
-                      <li (click)="delete(selectedRecord)">
+                      <!-- <li (click)="delete(selectedRecord)">
                         <i class="pi pi-trash"></i> Delete
-                      </li>
+                      </li> -->
                       <li (click)="viewInvoice(selectedRecord)">
                         <i class="pi pi-eye"></i> View
                       </li>
