--- a/10.2.0/angular/src/app/pharmacist/view-purchase-invoice/view-purchase-invoice.component.html
+++ b/10.2.0/angular/src/app/pharmacist/view-purchase-invoice/view-purchase-invoice.component.html
@@ -56,11 +56,8 @@
   </div>
 </div>
 
-<div class="modal-footer justify-content-between">
+<div class="modal-footer justify-content-center">
   <button type="button" class="btn btn-secondary" (click)="close()">
     <i class="fa fa-times"></i> Close
-  </button>
-  <button type="button" class="btn btn-primary" (click)="printInvoice()">
-    <i class="fa fa-print"></i> Print
   </button>
 </div>
