-> Added validation to prevent discharge until all unpaid prescriptions are settled. -> Added validation to ensure all lab tests are completed before discharge. -> Maintained paginated grid table binding in the Emergency module.

--- a/10.2.0/angular/src/app/master-table/health-package/health-package.component.html
+++ b/10.2.0/angular/src/app/master-table/health-package/health-package.component.html
@@ -57,7 +57,7 @@
               </ng-template>
             </p-table>
 
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">No health packages found.</div>
+            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">No health packages found.</div>
             <div class="ui-table-footer"></div>
           </div>
         </div>
