--- a/10.2.0/angular/src/app/procedure/procedure-receipt/procedure-receipt.component.html
+++ b/10.2.0/angular/src/app/procedure/procedure-receipt/procedure-receipt.component.html
@@ -131,7 +131,7 @@
               </ng-template>
             </p-table>
 
-            <div class="primeng-no-data"
+            <div class="primeng-no-data text-center m-2"
               *ngIf="primengTableHelper.totalRecordsCount === 0">
               {{ 'NoData' | localize }}
             </div>
