--- a/10.2.0/angular/src/app/admission/admission.component.html
+++ b/10.2.0/angular/src/app/admission/admission.component.html
@@ -1,157 +1,130 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Admit Patient</h1>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
                 </div>
-                <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="createAdmission()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh"
+                        tooltipPosition="top" (click)="refresh()">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-refresh"></span>
+                        </button>
+                    </div>
+                    <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createAdmission()">
+                        <button type="button" class="btn btn-md add-btn">
+                            <div class="d-flex align-items-center justify-content-between">
+                                <span class="pi pi-plus-circle mr-2"></span>
+                                <span>New Admission</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="content px-2 pb-3">
+    <section class="content px-2 pb-5">
         <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
-                                    </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                            </div>
+            <div class="card mb-0 table-wrapper">
+                <div class="card-body">
+                    <div class="d-flex justify-content-end  align-items-center mb-3">
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
                         </div>
                     </div>
-                </div>
-                <!-- (onLazyLoad)="list($event)" -->
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="min-width: 150px">
-                                        Patient
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        Doctor
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        Nurse
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        Date & Time
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        Room
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        Bed Number
-                                    </th>
-                                    <th style="min-width: 130px">
-                                        Actions
-                                    </th>
-                                </tr>
-                            </ng-template>
+                    <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+                        rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+                        [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
+                        <ng-template #header>
+                            <tr>
+                                <th pSortableColumn="patientName">
+                                    Patient
+                                    <p-sortIcon field="patientName"></p-sortIcon>
+                                </th>
+                                <th pSortableColumn="doctorName">
+                                    Doctor
+                                    <p-sortIcon field="doctorName"></p-sortIcon>
+                                </th>
+                                <th>
+                                    Nurse
+                                </th>
+                                <th>
+                                    Date & Time
+                                </th>
+                                <th>
+                                    Room
+                                </th>
+                                <th>
+                                    Bed Number
+                                </th>
+                                <th>
+                                    Actions
+                                </th>
+                            </tr>
+                        </ng-template>
 
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.patientName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            Dr. {{ record.doctorName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.nurseName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <p class="m-0">
-                                            {{ record.admissionDateTime | date: 'dd/MM/yyyy' }}
-                                        </p>
-                                        
-                                    </td>
-                                    <td>
-                                        <span>
+                        <ng-template pTemplate="body" let-record="$implicit">
+                            <tr>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.patientName)" class="mr-1" size="small" />
+                                    <span>
+                                        {{ record.patientName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.doctorName)"
+                                        [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1"
+                                        size="small" />
+                                    <span>
+                                        Dr. {{ record.doctorName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.nurseName)"
+                                        [style]="{ 'background-color': '#dee9fc', color: '#1a2551' }" class="mr-1"
+                                        size="small" />
+                                    <span>
+                                        {{ record.nurseName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    {{ record.admissionDateTime | date: 'dd/MM/yyyy' }}
+                                </td>
+                                <td>
+                                    <span>
                                         {{ record.roomNumber }}-{{ record.roomTypeName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
                                         {{ record.bedNumber }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                                            (click)="rowMenu.toggle($event); selectedRecord = record">
-                                        </button>
-                                        <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                                            <ul class="custom-overlay-menu">
-                                                <li (click)="editAdmission(selectedRecord)">
-                                                    <i class="pi pi-pencil"></i> Edit
-                                                </li>
-                                                <!-- <li (click)="delete(selectedRecord)">
-                                                    <i class="pi pi-trash"></i> Delete
-                                                </li> -->
-                                                    <!-- <li *ngIf="record.status !== 3" (click)="changeStatusofAdmission(record.id,4)">
-                                                    <i class="pi pi-times"></i> Cancel
-                                                </li> -->
-                                            </ul>
-                                        </p-overlayPanel>
-                                    </td>
-                                    <td *ngIf="record.status === 3"></td> 
+                                    </span>
+                                </td>
+                                <td>
+                                    <button class="btn btn-sm border rounded-1 px-3" type="button"
+                                        style="background-color: #f8fafc;"
+                                        (click)="rowMenu.toggle($event); selectedRecord = record">
+                                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                                    </button>
+                                    <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                                        [model]="editDeleteMenus" appendTo="body"></p-menu>
+                                </td>
 
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
-                        </div>
-                        <div class="ui-table-footer"></div>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div class="primeng-no-data text-center" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        {{ 'NoData' | localize }}
                     </div>
                 </div>
-
-
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
