--- a/10.2.0/angular/src/app/deposit/deposit.component.html
+++ b/10.2.0/angular/src/app/deposit/deposit.component.html
@@ -85,7 +85,7 @@
               </ng-template>
             </p-table>
 
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
               {{ 'NoData' | localize }}
             </div>
           </div>
