--- a/10.2.0/angular/src/app/doctors/patient/patient.component.html
+++ b/10.2.0/angular/src/app/doctors/patient/patient.component.html
@@ -5,12 +5,6 @@
                 <div class="col-6">
                     <h1>Patients</h1>
                 </div>
-                <!-- <div class="col-6 text-right">
-                    <a href="javascript:;" class="btn bg-blue" (click)="showCreatePatientDialog()">
-                        <i class="fa fa-plus-square"></i>
-                        {{ 'Create' | localize }}
-                    </a>
-                </div> -->
             </div>
         </div>
     </section>
@@ -112,7 +106,7 @@
                                         Assigned Nurse
                                     </th>
                                     <th>
-                                        {{ 'IsActive' | localize }}
+                                        Is Admitted
                                     </th>
                                     <th>
                                         Status
@@ -138,21 +132,22 @@
                                     </td>
                                     <td *ngIf="showDoctorColumn">
                                         <span>
-                                            {{ record.doctorName }}
+                                            {{ record.doctorName || '-' }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.nurseName }}
+                                            {{ record.nurseName || '-' }}
                                         </span>
                                     </td>
                                     <td>
                                         <span>
-                                            {{ record.isActive }}
+                                            {{ record.isAdmitted }}
                                         </span>
                                     </td>
                                     <td>
                                         <p-tag [value]="getStatusLabel(record.discharge_Status)"
+                                            *ngIf="record.isAdmitted"
                                             [severity]="getStatusSeverity(record.discharge_Status)" [rounded]="true">
                                         </p-tag>
                                     </td>
@@ -162,7 +157,7 @@
                                         </button>
                                         <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
                                             <ul class="custom-overlay-menu">
-                                                <li *ngIf="record.discharge_Status !== 0 && record.discharge_Status < 5"
+                                                <li *ngIf="record.isAdmitted && record.discharge_Status < 9"
                                                     (click)="gotoDischargeSummaryPage(selectedRecord.id)">
                                                     <i class="fa-solid fa-right-from-bracket"></i>Discharge Process
                                                 </li>
@@ -184,7 +179,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             {{ 'NoData' | localize }}
                         </div>
                         <div class="ui-table-footer"></div>
