--- a/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.css
+++ b/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.css
@@ -1,40 +1,119 @@
 /* Overlay Panel Custom Style */
 .p-overlaypanel.custom-overlay {
-    padding: 0;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
-    background-color: #ffffff;
-    min-width: 160px;
-    overflow: hidden;
-  }
-  
-  /* List inside panel */
-  .custom-overlay-menu {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  /* Individual action item */
-  .custom-overlay-menu li {
-    padding: 10px 16px;
-    font-size: 14px;
-    color: #333;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-  }
-  
-  /* Hover effect */
-  .custom-overlay-menu li:hover {
-    background-color: #f6f6f9;
-  }
-  
-  /* Icon spacing */
-  .custom-overlay-menu li i {
-    margin-right: 10px;
-    color: #607d8b;
-  }
-  
+  padding: 0;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+  background-color: #ffffff;
+  min-width: 160px;
+  overflow: hidden;
+}
+
+/* List inside panel */
+.custom-overlay-menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* Individual action item */
+.custom-overlay-menu li {
+  padding: 10px 16px;
+  font-size: 14px;
+  color: #333;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+/* Hover effect */
+.custom-overlay-menu li:hover {
+  background-color: #f6f6f9;
+}
+
+/* Icon spacing */
+.custom-overlay-menu li i {
+  margin-right: 10px;
+  color: #607d8b;
+}
+
+
+
+::ng-deep .p-breadcrumb {
+  background: none !important;
+  padding: 0 !important;
+}
+
+::ng-deep .add-btn {
+  background-color: #1F6DB2 !important;
+  color: white;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+::ng-deep .add-btn:hover {
+  color: white;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+::ng-deep .refresh-btn {
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #E2E8F0;
+}
+
+::ng-deep .p-card-header {
+  border-bottom: 1px solid #E2E8F0;
+}
+
+::ng-deep .p-card {
+  border-radius: 5px;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+
+::ng-deep .header-content {
+  padding: 1.5rem;
+}
+
+::ng-deep .dropdown-toggle:after {
+  display: inline-block;
+  vertical-align: 0;
+  border: 0;
+  font-size: 14px;
+  position: relative;
+  content: "\f107";
+  font-family: "FontAwesome";
+}
+
+::ng-deep .search-bar-text {
+  padding: 5px !important;
+}
+
+::ng-deep .p-popover-content {
+  padding: 0px !important;
+}
+
+::ng-deep .p-datatable-thead {
+  line-height: 2.5rem !important;
+}
+
+::ng-deep .p-datatable {
+  border: 1px solid #E2E8F0;
+}
+
+::ng-deep .p-datatable th {
+  padding: 5px 10px !important;
+}
+
+::ng-deep .p-datatable td {
+  padding: 8px 12px !important;
+}
+
+::ng-deep .edit-delete-btn {
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #E2E8F0;
+}
