--- a/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.html
+++ b/10.2.0/angular/src/app/emergency/emergency-case/emergency-case.component.html
@@ -1,15 +1,25 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Emergency Cases</h1>
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p-breadcrumb [model]="items" />
         </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createEmergencyCase()">
-            <i class="fa fa-plus-square"></i>
-            {{ 'Create' | localize }}
-          </a>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh" tooltipPosition="top"
+            (click)="refresh()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createEmergencyCase()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center justify-content-between">
+                <span class="pi pi-plus-circle mr-2"></span>
+                <span>New Case</span>
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -17,110 +27,88 @@
 
   <section class="content px-2 pb-3">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
+            </div>
+          </div>
+          <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '60rem' }" (onLazyLoad)="list($event)">
+
+            <ng-template #header>
+              <tr>
+                <th>Emergency No</th>
+                <th>Patient</th>
+                <th>Doctor</th>
+                <th>Nurse</th>
+                <th>Arrival Time</th>
+                <th>Severity</th>
+                <th>Status</th>
+                <th>Actions</th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-record="$implicit">
+              <tr>
+                <td>{{ record.emergencyNumber }}</td>
+                <td>
+                  <p-avatar [label]="getShortName(record.patientName)" class="mr-1" size="small" />
+                  {{ record.patientName||'unknown' }}
+                </td>
+                <td>
+                  <p-avatar [label]="getShortName(record.doctorName)"
+                    [style]="{ 'background-color': '#ece9fc', color: '#2a1261' }" class="mr-1" size="small" />
+                  <span *ngIf="record.doctorName">Dr.</span>{{ record.doctorName }}
+                </td>
+                <td>
+                  <p-avatar [label]="getShortName(record.nurseName)"
+                    [style]="{ 'background-color': '#dee9fc', color: '#1a2551' }" class="mr-1" size="small" />
+                  {{ record.nurseName }}
+                </td>
+                <td>{{ record.arrivalTime | date: 'dd/MM/yyyy HH:mm' }}</td>
+                <td>
+                  <p-tag [value]="getSeverityLabel(record.severity)" [severity]="getSeverityTag(record.severity)"
+                    [rounded]="true">
+                  </p-tag>
+                </td>
+                <td>
+                  <p-tag [value]="getStatusLabel(record.status)" [severity]="getStatusTag(record.status)"
+                    [rounded]="true">
+                  </p-tag>
+                </td>
+                <td>
+                  <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
+                    (click)="rowMenu.toggle($event); selectedRecord = record" *ngIf="!idDischarged(record.status)">
                   </button>
-                </div>
-                <input type="text" class="form-control" name="keyword" [placeholder]="'SearchWithThreeDot' | localize"
-                  [(ngModel)]="keyword" (keyup.enter)="list()" />
-              </div>
-            </div>
+                  <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
+                    <ul class="custom-overlay-menu">
+                      <li (click)="editEmergencyCase(selectedRecord)" *ngIf="!idAdmitted(record.status)">
+                        <i class="pi pi-pencil"></i> Edit
+                      </li>
+                      <li (click)="delete(selectedRecord)">
+                        <i class="pi pi-trash"></i> Delete
+                      </li>
+                    </ul>
+                  </p-overlayPanel>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+            {{ 'NoData' | localize }}
           </div>
         </div>
 
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-              rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-              [tableStyle]="{ 'min-width': '60rem' }" (onLazyLoad)="list($event)">
-
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Emergency No</th>
-                  <th>Patient</th>
-                  <th>Doctor</th>
-                  <th>Nurse</th>
-                  <th>Arrival Time</th>
-                  <th>ModeOfArrival</th>
-                  <th>Severity</th>
-                  <th>Status</th>
-                  <th>Actions</th>
-                </tr>
-              </ng-template>
-
-              <ng-template pTemplate="body" let-record="$implicit">
-                <tr>
-                  <td>{{ record.emergencyNumber }}</td>
-                  <td>{{ record.patientName||'unknown' }}</td>
-                  <td>
-                    <span *ngIf="record.doctorName">Dr.</span>{{ record.doctorName }}
-                  </td>
-                  <td>{{ record.nurseName }}</td>
-                  <td>{{ record.arrivalTime | date: 'dd/MM/yyyy HH:mm' }}</td>
-                  <td>{{ getModeOfArrivalLabel(record.modeOfArrival) }}</td>
-                  <td>
-                    <p-tag [value]="getSeverityLabel(record.severity)" [severity]="getSeverityTag(record.severity)"
-                      [rounded]="true">
-                    </p-tag>
-                  </td>
-                  <td>
-                    <p-tag [value]="getStatusLabel(record.status)" [severity]="getStatusTag(record.status)"
-                      [rounded]="true">
-                    </p-tag>
-                  </td>
-                  <td>
-                    <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                      (click)="rowMenu.toggle($event); selectedRecord = record" *ngIf="!idDischarged(record.status)">
-                    </button>
-                    <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                      <ul class="custom-overlay-menu">
-                        <li (click)="editEmergencyCase(selectedRecord)" *ngIf="!idAdmitted(record.status)">
-                          <i class="pi pi-pencil"></i> Edit
-                        </li>
-                        <li (click)="delete(selectedRecord)">
-                          <i class="pi pi-trash"></i> Delete
-                        </li>
-                      </ul>
-                    </p-overlayPanel>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-              {{ 'NoData' | localize }}
-            </div>
-          </div>
-        </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <div class="primeng-paging-container">
-                  <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
-                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                    [showCurrentPageReport]="true"
-                    [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                  </p-paginator>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
 
       </div>
     </div>
