--- a/10.2.0/angular/src/app/emergency/emergency-lab-orders/emergency-lab-orders.component.html
+++ b/10.2.0/angular/src/app/emergency/emergency-lab-orders/emergency-lab-orders.component.html
@@ -1,195 +1,114 @@
 <div [@routerTransition]>
     <section class="content-header">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-6">
-                    <h1>Emergency Lab Orders</h1>
+            <div class="d-flex justify-content-between align-items-center">
+                <div>
+                    <p-breadcrumb [model]="items" />
+                </div>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh"
+                        tooltipPosition="top" (click)="refresh()">
+                        <button type="button" class="btn btn-md refresh-btn">
+                            <span class="pi pi-refresh"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="content px-2 pb-3">
+    <section class="content px-2 pb-5">
         <div class="container-fluid">
-            <div class="card table-wrapper">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col-md-6">&emsp;</div>
-                        <div class="col-md-6">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button type="button" class="btn bg-blue" (click)="list()">
-                                        <i class="fas fa-search"></i>
+            <div class="card mb-0 table-wrapper">
+                <div class="card-body">
+                    <div class="d-flex justify-content-end  align-items-center mb-3">
+                        <div>
+                            <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
+                        </div>
+                    </div>
+                    <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+                        rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+                        [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
+                        <ng-template pTemplate="header">
+                            <tr>
+                                <th style="min-width: 100px" pSortableColumn="patientName">
+                                    Patient Name
+                                    <p-sortIcon field="patientName"></p-sortIcon>
+                                </th>
+                                <th style="min-width: 50px">
+                                    Gender
+                                </th>
+                                <th style="min-width: 100px">
+                                    Date
+                                </th>
+                                <th style="min-width: 100px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
+                                    Referred By
+                                    <p-sortIcon field="patientName"></p-sortIcon>
+                                </th>
+                                <th style="min-width: 150px" pSortableColumn="testname">
+                                    Test Type
+                                </th>
+                                <th style="min-width: 100px" pSortableColumn="status">
+                                    {{ 'Status' | localize }}
+                                </th>
+                                <th style="min-width: 150px">
+                                    {{ 'Actions' | localize }}
+                                </th>
+                            </tr>
+                        </ng-template>
+
+                        <ng-template pTemplate="body" let-record="$implicit">
+                            <tr>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.patientName)" class="mr-1" size="small" />
+                                    <span>
+                                        {{ record.patientName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.gender }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.date | date: 'dd/MM/yyyy' }}
+                                    </span>
+                                </td>
+                                <td *ngIf="showDoctorColumn">
+                                    <span>
+                                        Dr. {{ record.doctorName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>
+                                        {{ record.labReportTypeName }}
+                                    </span>
+                                </td>
+                                <td>
+                                    <p-tag [value]="getStatusLabel(record.testStatus)"
+                                        [severity]="getStatusSeverity(record.testStatus)" [rounded]="true">
+                                    </p-tag>
+                                </td>
+                                <td>
+                                    <button type="button" pButton icon="pi pi-eye" class="p-button-text"
+                                        (click)="ViewLabReport(record.id)">
                                     </button>
-                                </div>
-                                <input type="text" class="form-control" name="keyword"
-                                    [placeholder]="'SearchWithThreeDot' | localize" [(ngModel)]="keyword"
-                                    (keyup.enter)="list()" />
-                                <div class="input-group-append">
-                                    <button type="button" class="btn btn-default"
-                                        (click)="advancedFiltersVisible = !advancedFiltersVisible">
-                                        <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
-                                            [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+                                </td>
+                            </tr>
+                        </ng-template>
+                    </p-table>
+                    <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        {{ 'NoData' | localize }}
                     </div>
-                    @if (advancedFiltersVisible) {
-                    <div class="card mb-0 mt-1">
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group row mb-0">
-                                            <label class="col-md-3 col-form-label">
-                                                {{ 'IsActive' | localize }}
-                                            </label>
-                                            <div class="col-md-9 pt-2">
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio" class="custom-control-input" id="isActiveAll"
-                                                        name="isActive" [(ngModel)]="isActive" [value]="undefined"
-                                                        checked />
-                                                    <label class="custom-control-label" for="isActiveAll">
-                                                        {{ 'All' | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline mx-3">
-                                                    <input type="radio" class="custom-control-input" id="isActiveActive"
-                                                        name="isActive" [(ngModel)]="isActive" [value]="true" />
-                                                    <label class="custom-control-label" for="isActiveActive">
-                                                        {{ 'Yes' | localize }}
-                                                    </label>
-                                                </div>
-                                                <div class="custom-control custom-radio d-inline">
-                                                    <input type="radio" class="custom-control-input"
-                                                        id="isActivePassive" name="isActive" [(ngModel)]="isActive"
-                                                        [value]="false" />
-                                                    <label class="custom-control-label" for="isActivePassive">
-                                                        {{ 'No' | localize }}
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="button" class="btn bg-blue">
-                                {{ 'Search' | localize }}
-                            </button>
-                            <button type="button" class="btn btn-default float-right" (click)="clearFilters()">
-                                {{ 'Clear' | localize }}
-                            </button>
-                        </div>
-                    </div>
-                    }
+                    <div class="ui-table-footer"></div>
                 </div>
-                <div class="card-body table-responsive table-striped table-bordered">
-                    <div class="primeng-datatable-container">
-                        <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-                            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-                            [tableStyle]="{ 'min-width': '50rem' }" (onLazyLoad)="list($event)">
-                            <ng-template pTemplate="header">
-                                <tr>
-                                    <th style="min-width: 100px" pSortableColumn="patientName">
-                                        Patient Name
-                                        <p-sortIcon field="patientName"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 50px">
-                                        Gender
-                                    </th>
-                                    <th style="min-width: 100px">
-                                        Date
-                                    </th>
-                                    <th style="min-width: 100px" pSortableColumn="doctorName" *ngIf="showDoctorColumn">
-                                        Referred By
-                                        <p-sortIcon field="patientName"></p-sortIcon>
-                                    </th>
-                                    <th style="min-width: 150px" pSortableColumn="testname">
-                                        Test Type
-                                    </th>
-                                    <th style="min-width: 100px" pSortableColumn="status">
-                                        {{ 'Status' | localize }}
-                                    </th>
-                                    <th style="min-width: 150px">
-                                        {{ 'Actions' | localize }}
-                                    </th>
-                                </tr>
-                            </ng-template>
-
-                            <ng-template pTemplate="body" let-record="$implicit">
-                                <tr>
-                                    <td>
-                                        <span>
-                                            {{ record.patientName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.gender }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.date | date: 'dd/MM/yyyy' }}
-                                        </span>
-                                    </td>
-                                    <td *ngIf="showDoctorColumn">
-                                        <span>
-                                            Dr. {{ record.doctorName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <span>
-                                            {{ record.labReportTypeName }}
-                                        </span>
-                                    </td>
-                                    <td>
-                                        <p-tag 
-                                          [value]="getStatusLabel(record.testStatus)" 
-                                          [severity]="getStatusSeverity(record.testStatus)" 
-                                          [rounded]="true">
-                                        </p-tag>
-                                    </td>
-                                    <td>
-                                        <button type="button" pButton icon="pi pi-eye" class="p-button-text"
-                                            (click)="ViewLabReport(record.id)">
-                                        </button>
-                                    </td>
-                                </tr>
-                            </ng-template>
-                        </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-                            {{ 'NoData' | localize }}
-                        </div>
-                        <div class="ui-table-footer"></div>
-                    </div>
-                </div>
-
-
-                <div class="card-footer table-card-footer bg-white border-top">
-                    <div class="row">
-                        <div class="col-sm-4 col-12 text-sm-left text-center">
-                            <button class="btn btn-secondary" (click)="refresh()">
-                                <i class="fas fa-redo-alt"></i>
-                            </button>
-                        </div>
-                        <div class="col-sm-8 col-12">
-                            <div class="float-sm-right m-auto">
-                                <div class="primeng-paging-container">
-                                    <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                                        (onPageChange)="list($event)"
-                                        [totalRecords]="primengTableHelper.totalRecordsCount"
-                                        [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
-                                        [showCurrentPageReport]="true" [currentPageReportTemplate]="
+                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                    (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
+                    [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage"
+                    [showCurrentPageReport]="true" [currentPageReportTemplate]="
                                             'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount
                                         "></p-paginator>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
