--- a/10.2.0/angular/src/app/emergency/emergency-triage/emergency-triage.component.html
+++ b/10.2.0/angular/src/app/emergency/emergency-triage/emergency-triage.component.html
@@ -1,116 +1,91 @@
 <div [@routerTransition]>
   <section class="content-header">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-6">
-          <h1>Emergency Triage</h1>
+      <div class="d-flex justify-content-between align-items-center">
+        <div>
+          <p-breadcrumb [model]="items" />
         </div>
-        <div class="col-6 text-right">
-          <a href="javascript:;" class="btn bg-blue" (click)="createTriage()">
-            <i class="fa fa-plus-square"></i>
-            {{ 'Create' | localize }}
-          </a>
+        <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+          <div class="btn-group mr-1" role="group" aria-label="Third group" pTooltip="Refresh" tooltipPosition="top"
+            (click)="refresh()">
+            <button type="button" class="btn btn-md refresh-btn">
+              <span class="pi pi-refresh"></span>
+            </button>
+          </div>
+          <div class="btn-group mr-2" role="group" aria-label="Fourth group" (click)="createTriage()">
+            <button type="button" class="btn btn-md add-btn">
+              <div class="d-flex align-items-center justify-content-between">
+                <span class="pi pi-plus-circle mr-2"></span>
+                <span>New User</span>
+              </div>
+            </button>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="content px-2 pb-3">
+  <section class="content px-2 pb-5">
     <div class="container-fluid">
-      <div class="card table-wrapper">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-md-6">&emsp;</div>
-            <div class="col-md-6">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <button type="button" class="btn bg-blue" (click)="list()">
-                    <i class="fas fa-search"></i>
+      <div class="card mb-0 table-wrapper">
+        <div class="card-body">
+          <div class="d-flex justify-content-end align-items-center mb-3">
+            <div>
+              <input class="search-bar-text" type="text" pInputText [(ngModel)]="keyword" pSize="small"
+                [placeholder]="'SearchWithThreeDot' | localize" (input)="list()" />
+            </div>
+          </div>
+          <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
+            rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
+            [tableStyle]="{ 'min-width': '60rem' }" (onLazyLoad)="list($event)">
+
+            <ng-template pTemplate="header">
+              <tr>
+                <th>Emergency No</th>
+                <th>Temperature</th>
+                <th>Respiratory Rate</th>
+                <th>Heart Rate</th>
+                <th>Oxygen Saturation</th>
+                <th>BP</th>
+                <th>Assessment Time</th>
+                <th>Severity</th>
+                <th>Actions</th>
+              </tr>
+            </ng-template>
+
+            <ng-template pTemplate="body" let-record="$implicit">
+              <tr>
+                <td>{{ record.emergencyNumber }}</td>
+                <td>{{ record.temperature }}</td>
+                <td>{{ record.respiratoryRate }}</td>
+                <td>{{ record.heartRate }}</td>
+                <td>{{ record.oxygenSaturation }}</td>
+                <td>{{ record.bloodPressureSystolic }}/{{ record.bloodPressureDiastolic }}</td>
+                <td>{{ record.time | date:'dd/MM/yyyy HH:mm' }}</td>
+                <td><p-tag [value]="getSeverityLabel(record.severity)" [severity]="getSeverityTag(record.severity)"
+                    [rounded]="true">
+                  </p-tag></td>
+                <td>
+                  <button class="btn btn-sm border rounded-1 px-3" type="button" style="background-color: #f8fafc;"
+                    (click)="rowMenu.toggle($event); selectedRecord = record">
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
                   </button>
-                </div>
-                <input type="text" class="form-control" name="keyword" [placeholder]="'SearchWithThreeDot' | localize"
-                  [(ngModel)]="keyword" (keyup.enter)="list()" />
-              </div>
-            </div>
+                  <p-menu #rowMenu [popup]="true" [style]="{'min-width':'80px', 'max-width':'150px'}"
+                    [model]="editDeleteMenus" appendTo="body"></p-menu>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+          <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
+            {{ 'NoData' | localize }}
           </div>
         </div>
-
-        <div class="card-body table-responsive table-striped table-bordered">
-          <div class="primeng-datatable-container">
-            <p-table #dataTable sortMode="multiple" [value]="primengTableHelper.records"
-              rows="{{ primengTableHelper.defaultRecordsCountPerPage }}" [paginator]="false" [lazy]="true"
-              [tableStyle]="{ 'min-width': '60rem' }" (onLazyLoad)="list($event)">
-
-              <ng-template pTemplate="header">
-                <tr>
-                  <th>Emergency No</th>
-                  <th>Temperature</th>
-                  <th>Respiratory Rate</th>
-                  <th>Heart Rate</th>
-                  <th>Oxygen Saturation</th>
-                  <th>BP</th>
-                  <th>Assessment Time</th>
-                  <th>Severity</th>
-                  <th>Actions</th>
-                </tr>
-              </ng-template>
-
-              <ng-template pTemplate="body" let-record="$implicit">
-                <tr>
-                  <td>{{ record.emergencyNumber }}</td>
-                  <td>{{ record.temperature }}</td>
-                  <td>{{ record.respiratoryRate }}</td>
-                  <td>{{ record.heartRate }}</td>
-                  <td>{{ record.oxygenSaturation }}</td>
-                  <td>{{ record.bloodPressureSystolic }}/{{ record.bloodPressureDiastolic }}</td>
-                  <td>{{ record.time | date:'dd/MM/yyyy HH:mm' }}</td>
-                  <td><p-tag [value]="getSeverityLabel(record.severity)" [severity]="getSeverityTag(record.severity)"
-                      [rounded]="true">
-                    </p-tag></td>
-                  <td>
-                    <button type="button" pButton icon="pi pi-ellipsis-v" class="p-button-text"
-                      (click)="rowMenu.toggle($event); selectedRecord = record">
-                    </button>
-                    <p-overlayPanel #rowMenu class="custom-overlay" [dismissable]="true">
-                      <ul class="custom-overlay-menu">
-                        <li (click)="editTriage(selectedRecord)">
-                          <i class="pi pi-pencil"></i> Edit
-                        </li>
-                        <li (click)="delete(selectedRecord)">
-                          <i class="pi pi-trash"></i> Delete
-                        </li>
-                      </ul>
-                    </p-overlayPanel>
-                  </td>
-                </tr>
-              </ng-template>
-            </p-table>
-
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
-              {{ 'NoData' | localize }}
-            </div>
-          </div>
-        </div>
-
-        <div class="card-footer table-card-footer bg-white border-top">
-          <div class="row">
-            <div class="col-sm-4 col-12 text-sm-left text-center">
-              <button class="btn btn-secondary" (click)="refresh()">
-                <i class="fas fa-redo-alt"></i>
-              </button>
-            </div>
-            <div class="col-sm-8 col-12">
-              <div class="float-sm-right m-auto">
-                <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
-                  (onPageChange)="list($event)" [totalRecords]="primengTableHelper.totalRecordsCount"
-                  [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
-                  [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
-                </p-paginator>
-              </div>
-            </div>
-          </div>
-        </div>
-
+        <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator (onPageChange)="list($event)"
+          [totalRecords]="primengTableHelper.totalRecordsCount"
+          [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage" [showCurrentPageReport]="true"
+          [currentPageReportTemplate]="'TotalRecordsCount' | localize: primengTableHelper.totalRecordsCount">
+        </p-paginator>
       </div>
     </div>
   </section>
