--- a/10.2.0/angular/src/app/master-table/appointment-types/appointment-types.component.html
+++ b/10.2.0/angular/src/app/master-table/appointment-types/appointment-types.component.html
@@ -61,7 +61,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                                 No appointment types found.
                         </div>
                         <div class="ui-table-footer"></div>
