--- a/10.2.0/angular/src/app/master-table/department/department.component.html
+++ b/10.2.0/angular/src/app/master-table/department/department.component.html
@@ -55,7 +55,7 @@
               </ng-template>
             </p-table>
 
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
               No departments found.
             </div>
           </div>
