--- a/10.2.0/angular/src/app/master-table/lab-report-type/lab-report-type.component.html
+++ b/10.2.0/angular/src/app/master-table/lab-report-type/lab-report-type.component.html
@@ -52,7 +52,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             No lab report type found.
                         </div>
                         <div class="ui-table-footer"></div>
