--- a/10.2.0/angular/src/app/master-table/measure-unit/measure-unit.component.html
+++ b/10.2.0/angular/src/app/master-table/measure-unit/measure-unit.component.html
@@ -104,7 +104,7 @@
               </ng-template>
             </p-table>
 
-            <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount === 0">
+            <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount === 0">
               No units found.
             </div>
           </div>
