--- a/10.2.0/angular/src/app/master-table/room-facilities/room-facilities.component.html
+++ b/10.2.0/angular/src/app/master-table/room-facilities/room-facilities.component.html
@@ -50,7 +50,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             No facilities found.
                         </div>
                         <div class="ui-table-footer"></div>
