--- a/10.2.0/angular/src/app/master-table/room-types/room-types.component.html
+++ b/10.2.0/angular/src/app/master-table/room-types/room-types.component.html
@@ -54,7 +54,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             No room types found.
                         </div>
                         <div class="ui-table-footer"></div>
