--- a/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
+++ b/10.2.0/angular/src/app/nurse/vitals-notes/vitals-notes.component.html
@@ -174,7 +174,7 @@
                                 </tr>
                             </ng-template>
                         </p-table>
-                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                        <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                             {{ 'NoData' | localize }}
                         </div>
                         <div class="ui-table-footer"></div>
