--- a/10.2.0/angular/src/app/patient-discharge/list/list.component.html
+++ b/10.2.0/angular/src/app/patient-discharge/list/list.component.html
@@ -35,17 +35,25 @@
                         <ng-template pTemplate="body" let-record="$implicit">
                             <tr>
                                 <td> P#{{ record.patient.id }} </td>
-                                <td> {{ record.patient.fullName }} </td>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.patient.fullName)" class="mr-1"
+                                        size="small" />
+                                    {{ record.patient.fullName }}
+                                </td>
                                 <td> {{ record.admission.admissionDateTime | date:'dd/MM/yyyy hh:mm a' }} </td>
                                 <td> {{ record.dischargeDate | date:'dd/MM/yyyy hh:mm a' }} </td>
-                                <td> Dr. {{ record.doctor.fullName }} </td>
+                                <td>
+                                    <p-avatar [label]="getShortName(record.doctor.fullName)" class="mr-1"
+                                        size="small" />
+                                    Dr. {{ record.doctor.fullName }}
+                                </td>
                                 <td>
                                     <span class="pi pi-download"></span>
                                 </td>
                             </tr>
                         </ng-template>
                     </p-table>
-                    <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                    <div class="primeng-no-data text-center m-2" *ngIf="primengTableHelper.totalRecordsCount == 0">
                         {{ 'NoData' | localize }}
                     </div>
                 </div>
