--- a/10.2.0/angular/src/app/users/users.component.css
+++ b/10.2.0/angular/src/app/users/users.component.css
@@ -1,45 +1,3 @@
-/* Overlay Panel Custom Style */
-.p-overlaypanel.custom-overlay {
-  padding: 0;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
-  background-color: #ffffff;
-  min-width: 160px;
-  overflow: hidden;
-}
-
-/* List inside panel */
-.custom-overlay-menu {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-/* Individual action item */
-.custom-overlay-menu li {
-  padding: 10px 16px;
-  font-size: 14px;
-  color: #333;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  transition: background-color 0.2s ease;
-}
-
-/* Hover effect */
-.custom-overlay-menu li:hover {
-  background-color: #f6f6f9;
-}
-
-/* Icon spacing */
-.custom-overlay-menu li i {
-  margin-right: 10px;
-  color: #607d8b;
-}
-
-
-
 ::ng-deep .p-breadcrumb {
   background: none !important;
   padding: 0 !important;
@@ -94,4 +52,25 @@
 
 ::ng-deep .p-popover-content {
   padding: 0px !important;
+}
+::ng-deep .p-datatable-thead {
+  line-height: 2.5rem !important;
+}
+
+::ng-deep .p-datatable {
+  border: 1px solid #E2E8F0;
+}
+
+::ng-deep .p-datatable th {
+  padding: 5px 10px !important;
+}
+
+::ng-deep .p-datatable td {
+  padding: 8px 12px !important;
+}
+
+::ng-deep .edit-delete-btn {
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #E2E8F0;
 }
